<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PreferenciasCompartidas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_pref_1">Ingrese Pref 1</string>
    <string name="hint_pref_2">Ingrese Pref 2</string>
    <string name="hint_pref_3">Ingrese Pref 3</string>
    <string name="btn_set_1">Guardar(1)</string>
    <string name="btn_set_2">Guardar(2)</string>
    <string name="btn_set_3">Guardar(3)</string>
    <string name="btn_clear_1">Limpiar(1)</string>
    <string name="btn_clear_2">Limpiar(2)</string>
    <string name="btn_clear_3">Limpiar(3)</string>
    <string name="btn_read">Validar Datos</string>
    <string name="no_saved_pref">No se encuentra</string>

</resources>